@@ -1,3 +1,6 @@
+we still get bogus error messages when reading a malformed .class file
+extra newline, no file name, bogus "while reading:" leader
+
 there's a bug with implicit qualifiers for field references.
 qualification in general needs some inspection.
 eg, for 'Foo.super.field', 'Foo.super' should probably be a qualifying
